# eig-ia

./: README.md
eig_ia/: CITATION.cff  Makefile  README.md  human_eval.csv  main.py  pyproject.toml  requirements.txt
eig_ia/configs/: ambigqa_gpt4.yaml  ambigqa_open.yaml  art_gpt4.yaml  art_open.yaml
eig_ia/outputs/20260107_115518/: metrics.csv  per_example.jsonl  reliability_art_eig_ia.json
eig_ia/outputs/20260107_120022/: config.json
eig_ia/outputs/20260107_120237/: bootstrap_art_eig_vs_direct.json  bootstrap_art_eig_vs_generic_clarify.json  config.json  metrics.csv  per_example.jsonl  reliability_art_direct.json
eig_ia/outputs/20260107_120702/: bootstrap_art_eig_vs_random_question.json  metrics.csv  per_example.jsonl  reliability_art_generic_clarify.json  reliability_art_random_question.json
eig_ia/outputs/20260107_121147/: config.json  metrics.csv  per_example.jsonl  reliability_art_eig_ia.json
eig_ia/scripts/: env_report.py  make_artifacts.sh  reproduce.sh
eig_ia/src/data/: ambigqa_loader.py  art_loader.py  prompt_templates.py
eig_ia/src/eig/: eig_estimator.py  gating.py  posterior.py
eig_ia/src/eval/: calibration.py  human_eval_prep.py  metrics.py  stats.py
eig_ia/src/llm/: api_llm.py  hf_llm.py  llm_base.py  tokenizer_utils.py
eig_ia/src/methods/: direct.py  dpo_question_ranker.py  eig_ia.py  generic_clarify.py  random_question.py
eig_ia/src/modules/: answer_simulator.py  hypothesis_scorer.py  oracle_answerers.py  question_generator.py
eig_ia/src/utils/: caching.py  io.py  logging.py  seeds.py  timers.py
eig_ia/src/viz/: make_plots.py  (+1 more)
(+8 files in other folders)
