[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eig-ia"
version = "0.1.0"
description = "EIG-Guided Interactive Abduction (EIG-IA)"
readme = "README.md"
requires-python = ">=3.10.12"
license = {text = "MIT"}
authors = [{name = "EIG-IA Authors"}]

dependencies = [
  "datasets>=2.18.0",
  "transformers>=4.41.0",
  "torch>=2.2.0",
  "numpy>=1.24.0",
  "pandas>=2.1.0",
  "matplotlib>=3.8.0",
  "pyyaml>=6.0.1",
  "tqdm>=4.66.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
